--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,22 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Cache Node.js modules
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: Install dependencies
+      run: npm ci
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -23,14 +39,10 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build React app
-      run: |
-        npm install
-        npm run build
+      run: npm run build
 
     - name: Docker build
-      run: |
-        docker build -t charithdev/real-estate:latest .
+      run: docker build -t charithdev/real-estate:latest .
 
     - name: Push Docker image
-      run: |
-        docker push charithdev/real-estate:latest
+      run: docker push charithdev/real-estate:latest
